Source/WebCore/dom/StaticNodeList.cpp
@@ -43,18 +43,6 @@ Node* StaticNodeList::item(unsigned index) const
     return nullptr;
 }
 
-Node* StaticNodeList::namedItem(const AtomicString& elementId) const
-{
-    if (elementId.isEmpty())
-        return nullptr;
-    for (unsigned i = 0, length = m_nodes.size(); i < length; ++i) {
-        Node& node = const_cast<Node&>(m_nodes[i].get());
-        if (is<Element>(node) && downcast<Element>(node).getIdAttribute() == elementId)
-            return &node;
-    }
-    return nullptr;
-}
-
 unsigned StaticElementList::length() const
 {
     return m_elements.size();
@@ -64,18 +52,6 @@ Node* StaticElementList::item(unsigned index) const
 {
     if (index < m_elements.size())
         return const_cast<Element*>(m_elements[index].ptr());
-    return nullptr;
-}
-
-Node* StaticElementList::namedItem(const AtomicString& elementId) const
-{
-    if (elementId.isEmpty())
-        return nullptr;
-    for (unsigned i = 0, length = m_elements.size(); i < length; ++i) {
-        Element& element = const_cast<Element&>(m_elements[i].get());
-        if (element.getIdAttribute() == elementId)
-            return &element;
-    }
     return nullptr;
 }
 
