Source/WebCore/dom/StaticNodeList.h
@@ -53,7 +53,6 @@ public:
 
     virtual unsigned length() const override;
     virtual Node* item(unsigned index) const override;
-    virtual Node* namedItem(const AtomicString&) const override;
 
 private:
     StaticNodeList() { }
@@ -77,7 +76,6 @@ public:
 
     virtual unsigned length() const override;
     virtual Node* item(unsigned index) const override;
-    virtual Node* namedItem(const AtomicString&) const override;
 
 private:
     StaticElementList()
